# DualityEngine

./: .gitignore  CMakeLists.txt  Owner.h  README.md  Score.h  SpatialChild.h  SpatialParent.h  compile.bat
Assets/GUI/: GUI_Console.h
Assets/GUI/NoCamBackground/: DebugBackground.h
Assets/Models/Cereal/: CerealBowl.3ds  CerealBowlObjFromBlenderSep.mtl  (+1 more)
Assets/Scripts/: assimpTest.dua  boxWall.dua  scene0.dua  testScene.dua  testScene1.dua
Assets/Shaders/: GUI_Console.frag  GUI_Console.vert  debugCube.frag  debugCube.vert  lighting2.fs  noCam.frag  noCam.vert  rayTracer.frag  redTri_3_0.frag  redTri_3_0.vert  repoDefault.vert  simple.frag  simpleCube.frag  simpleCube.vert  skyQuad.frag  skyQuad.vert
Assets/Textures/: debugBox.tga  debugBox.xcf  debugBoxTiny.raw
Headers/: AmbientLight.h  AngularVelocity.h  BankDelegates.h  CameraFree.h  Collision.h  Component.h  ComponentBank.h  ComponentCollection.h  Console.h  Control.h  ControlBase.h  ControlDelegateBag.h  ControlDelegates.h  ControlTypes.h  Control_SS.h  Delegate.h  DirectionalLight.h  Engine.h  FileIO.h  Functions.h  Game.h  Game.h~  Game0.h  HashMap.h  LinearVelocity.h  Maths.h  Matrix.h  MeshRepository.h  Model.h  Motion.h  Orientation.h  Owner.h  PhysCollide.h  PhysMove.h  PointLight.h  Position.h  PositionChild.h  PositionParent.h  PositionVeloc.h  Render.h  (+33 more)
Headers/Admin/: Engine.h  Game.h  System.h
Headers/AssetManagement/: MeshRepository.h  TextureRepository.h  loadShaders.h
Headers/Bank/: Bank.h  BankDelegates.h  ComponentBank.h  HashMap.h
Headers/Components/: CameraFree.h  Component.h  Model.h  Position.h  RotationVelocEuler.h  Score.h  SpaceControl.h
Headers/Systems/: Control_SS.h  PhysCollide.h  PhysMove.h  Render_Background.h  Render_BiTcubes.h  Render_Console.h  Render_Master.h  Render_Models.h  Scripting.h  System.h  UserInput.h
Headers/Utilities/: Console.h  Delegate.h  Engine.h  Event.h  HelpDocs.h  Settings.h  TimePiece.h  ToString.h
Source/: Box.cpp  ComponentBank.cpp  Console.cpp  Control_SS.cpp  Engine.cpp  FileIO.cpp  Functions.cpp  Game.cpp  Game.cpp~  HashMap.cpp  Maths.cpp  Matrix.cpp  PhysCollide.cpp  PhysMove.cpp  Render.cpp  Render0.cpp~  RenderOld.cpp  Render_Background.cpp  Render_BiTcubes.cpp  Render_Console.cpp  Render_Master.cpp  Render_Models.cpp  Render_Sky.cpp  Scripting.cpp  Settings.cpp  ShaderRepository.cpp  System.cpp  UserControl.cpp  UserInput.cpp  lighting_technique.cpp  loadCubeMap.cpp  loadShaders.cpp  main.cpp  mesh.cpp  technique.cpp  texture.cpp  tutorial33.cpp
Source/Admin/: Engine.cpp  Game.cpp  main.cpp
Source/AssetManagement/: FileIO.cpp  MeshRepository.cpp  ShaderRepository.cpp  loadCubeMap.cpp  loadShaders.cpp
Source/Bank/: Bank.cpp  ComponentBank.cpp  HashMap.cpp
Source/Entities/: Box.cpp
Source/Math/: ExtendGlm.cpp  Functions.cpp
Source/Systems/: Control_SS.cpp  PhysCollide.cpp  PhysMove.cpp  Render_Background.cpp  Render_BiTcubes.cpp  Render_Console.cpp  Render_Master.cpp  Render_Models.cpp  Scripting.cpp  System.cpp  UserInput.cpp
Source/Utilities/: Console.cpp  Event.cpp  HelpDocs.cpp  Settings.cpp  TimePiece.cpp  ToString.cpp
assets/scripts/: assimpTest.dua  boxWall.dua  newPlayer.dua  scene0.dua  scene0_noPhysWait.dua  testScene0.dua
assets/shaders/: GUI_Console.frag  debugCube.frag  genSdfFontTexture.frag  noCam.vert  rayTraceTrue.frag  repoDefault.frag  skyQuad.frag  textField.frag  textField.vert  textureView.frag  textureView.vert  textureViewSdf.frag
cmake/: FindAssimp.cmake  FindGLEW.cmake
cmake/Modules/: FindAssimp.cmake
meta/: compAddLocations.txt  gmon.out  profileOut.txt
meta/profiling/: callgrind.out.5263  callgrind.out.5302  callgrind.out.5406  callgrind.out.5450  callgrindResults0.txt  valgrindResult.txt
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
source/: CMakeLists.txt  Game.cpp  Game.h
source/assetManagement/: CMakeLists.txt  MeshRepository.cpp  MeshRepository.h  fileIO.cpp  loadShaders.cpp
source/assetManagement/ProgrammaticAssets/: DebugBackground.cpp  DebugBackground.h
source/assetManagement/loaders/: CMakeLists.txt  loadFont.cpp  loadFont.h  loadShaders.cpp  loadShaders.h
source/assetManagement/programmaticAssets/: CMakeLists.txt  DebugBackground.cpp  DebugBackground.h  DebugFontView.cpp  DebugFontView.h  TextureView.cpp  TextureView.h
source/assetManagement/repos/: CMakeLists.txt  FontRepo.cpp  FontRepo.h  MeshRepo.cpp  MeshRepo.h  ShaderRepo.cpp  ShaderRepo.h  SoundRepo.cpp  TextureRepo.cpp  TextureRepo.h
source/assetManagement/savers/: CMakeLists.txt
source/bank/: Bank.cpp  Bank.h  BankDelegates.h  CMakeLists.txt  KvMap.h
source/components/: CMakeLists.txt  CameraFree.h  OrientationEuler.h  Owner.h  PointLight.h  Position.h  PositionChild.h  PositionParent.h  Score.h  Soul.h  SpaceControl.h
source/entities/: Box.cpp  CMakeLists.txt
source/math/: CMakeLists.txt  Matrix.h  extendGlm.cpp  extendGlm.h  functions.cpp  functions.h
source/math/glm/detail/: func_common.hpp
source/math/glm/gtx/: simd_vec4.hpp
source/systems/: CMakeLists.txt  Control_SS.cpp  Control_SS.h  PhysCollide.cpp  PhysCollide.h  PhysMove.cpp  PhysMove.h  Render_Background.cpp  Render_Background.h  Render_BiTcubes.cpp  Render_BiTcubes.h  Render_Console.cpp  Render_Console.h  Render_Master.cpp  Render_Master.h  Render_Models.cpp  Render_Models.h  Render_UI.cpp  Render_UI.h  Scripting.cpp  Scripting.h  System.h  UserInput.cpp  UserInput.h
source/ui/: CMakeLists.txt  ConsoleDrawer.cpp  ConsoleDrawer.h  TextField.cpp  TextField.h  TextLine.cpp  TextLine.h
source/utilities/: CMakeLists.txt  Console.cpp  Console.h  Delegate.h  Engine.h  Event.h  ScreenShot.cpp  ScreenShot.h  TimePiece.h  errorChecks.cpp  errorChecks.h  helpDocs.cpp  helpDocs.h  settings.cpp  settings.h  toString.cpp  toString.h
temp/: DebugCube.h  GUI_Console.h  Matrix4.cs  StaticMatrices.cs  Vector3D.cs  Vector4D.cs  cleanup.bat  compile.bat  mesh.cpp  mesh.h
(+22 files in other folders)
